# PasswordSender

./: .gitignore  CMakeLists.txt  README.md  emailsender.cpp  emailsender.h  formfield.cpp  formfield.h  inputstreamqfileadapter.cpp  inputstreamqfileadapter.h  main.cpp  outputstreamqiodeviceadapter.cpp  outputstreamqiodeviceadapter.h  parsedrequest.cpp  parsedrequest.h  qfcgiapp.cpp  qfcgiapp.h  qfileencrypted.cpp  qfileencrypted.h  requestdownloader.cpp  requestdownloader.h  requestuploader.cpp  requestuploader.h  submittedsecret.cpp  submittedsecret.h  uploadedfile.cpp  uploadedfile.h  usererror.cpp  usererror.h
PasswordSenderTests/: CMakeLists.txt  mynamedtempfile.cpp  mynamedtempfile.h  tst_passwordsendertestcase.cpp
docroot/: emailtemplate.txt  errortemplate.html  gspasswords.css  index.html  showlandingtemplate.html  showsecrettemplate.html  template.html
qfcgi/: CMakeLists.txt
qfcgi/src/: qfcgi.h
qfcgi/src/qfcgi/: stream.cpp
